# document_organiser

./: .env  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  ai_providers.py  api_server.py  build_macos.py  build_macos_native.py  config.yaml  device_auth.py  docker-compose.yml  document_organizer.py  flatten_to_v2.py  icons.py  install.sh  jd_builder.py  jd_prompts.py  jd_system.py  migrate_to_jd.py  preview_renames.py  pyproject.toml  requirements.txt  settings.py  start_services.sh  ui.py
.github/workflows/: ci.yml  pages.yml
desktop/: launch.sh  launcher.py
docs/: index.html
document-organizer-electron/src/main/: ipc-handlers.ts  python-bridge.ts
document-organizer-electron/src/shared/: types.ts
pwa/: app.html  index.html  privacy.html
tests/: __init__.py  conftest.py  test_ai_providers.py  test_categorization.py  test_file_organization.py  test_text_extraction.py
